Fixed NPE in EverestCodeArea and added editorWrapText setting

--- a/src/main/resources/css/syntax/Moondust.css
+++ b/src/main/resources/css/syntax/Moondust.css
@@ -4,7 +4,7 @@
 
 .everest-code-area .text {
     -fx-fill: azure;
-    -fx-font-family: "Liberation Mono";
+    -fx-font-family: "Liberation Mono", monospace;
     -fx-font-size: 17px;
 }
 
